Blender2.8: Compilation errors on Windows MSVC 2013 update 5 #51188

Closed
opened 2017-04-12 17:58:22 +02:00 by Ulysse Martin · 15 comments

System Information
Windows 10 GTX 970 MSVC 2013 update 5

Blender Version
Broken: 2.8 428e07a
Worked: (optional)

Short description of error
Compilation errors. http:*pasteall.org/pic/show.php?id=114604 . .diff to fix: http:*pasteall.org/348885/diff . http://stackoverflow.com/questions/24736304/unable-to-use-inline-in-declaration-get-error-c2054 .

Exact steps for others to reproduce the error
git checkout blender 2.8
git pull
cmake
in visual studio I choosed release mode
right click on INSTALL in solution explorer then build

**System Information** Windows 10 GTX 970 MSVC 2013 update 5 **Blender Version** Broken: 2.8 428e07a Worked: (optional) **Short description of error** Compilation errors. http:*pasteall.org/pic/show.php?id=114604 . .diff to fix: http:*pasteall.org/348885/diff . http://stackoverflow.com/questions/24736304/unable-to-use-inline-in-declaration-get-error-c2054 . **Exact steps for others to reproduce the error** git checkout blender 2.8 git pull cmake in visual studio I choosed release mode right click on INSTALL in solution explorer then build
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @you.le

Added subscriber: @you.le
Author

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Member

Added subscriber: @MikeErwin

Added subscriber: @MikeErwin
Member

Do MSVC 2015 and 2017 also have this problem? If not we could consider dropping 2013 build support.

Also make sure the fix doesn't break clang & gcc builds.

Do MSVC 2015 and 2017 also have this problem? If not we could consider dropping 2013 build support. Also make sure the fix doesn't break clang & gcc builds.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Dalai Felinto self-assigned this 2017-04-12 18:59:46 +02:00

Fixed in 2871bad8ea . I didn't test it, but it should work. Let me know if it doesn't work so I can re-open the bug report.

Fixed in 2871bad8ea92646d3c10001e9f113a145d9a89b4 . I didn't test it, but it should work. Let me know if it doesn't work so I can re-open the bug report.

Added subscriber: @mano-wii

Added subscriber: @mano-wii

MSVC 2017 here. So far, no problem.

MSVC 2017 here. So far, no problem.
Author

Sorry @dfelinto, I was not in front of irc when you asked me to test. All is right here with your fix and MSVC 2013 update 5. Thanks!

Sorry @dfelinto, I was not in front of irc when you asked me to test. All is right here with your fix and MSVC 2013 update 5. Thanks!

Added subscriber: @antoniov

Added subscriber: @antoniov

@mano-wii are MSVC2017 libraries available in SVN? I had heard that CUDA is not compatible yet.

@mano-wii are MSVC2017 libraries available in SVN? I had heard that CUDA is not compatible yet.
Member

In #51188#427401, @antoniov wrote:
@mano-wii are MSVC2017 libraries available in SVN? I had heard that CUDA is not compatible yet.

MSVC 2015 libs (vc14) work with MSVC 2017. I don't know about CUDA.

> In #51188#427401, @antoniov wrote: > @mano-wii are MSVC2017 libraries available in SVN? I had heard that CUDA is not compatible yet. MSVC 2015 libs (vc14) work with MSVC 2017. I don't know about CUDA.
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Cuda dies not support MSVC yet.

Cuda dies not support MSVC yet.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51188
No description provided.