Fix T51188 compilation errors in Windows