source/blender/gpu/GPU_legacy_stubs.h
@@ -47,8 +47,6 @@
 
 #include "BLI_utildefines.h"
 
-#define _GL_PREFIX static inline
-
 /**
  * Empty function, use for breakpoint when a depreacated
  * OpenGL function is called.
@@ -58,32 +56,32 @@ static void gl_deprecated(void)
 	BLI_assert(true);
 }
 
-#define _GL_BOOL _GL_PREFIX GLboolean
+#define _GL_BOOL BLI_INLINE GLboolean
 #define _GL_BOOL_RET { \
 	gl_deprecated();   \
 	return false;      \
 }
 
-#define _GL_ENUM _GL_PREFIX GLenum
+#define _GL_ENUM BLI_INLINE GLenum
 #define _GL_ENUM_RET { \
 	gl_deprecated();   \
 	return 0;          \
 }
 
-#define _GL_INT _GL_PREFIX GLint
+#define _GL_INT BLI_INLINE GLint
 #define _GL_INT_RET { \
 	gl_deprecated();  \
 	return 0;         \
 }
 
 
-#define _GL_UINT _GL_PREFIX GLuint
+#define _GL_UINT BLI_INLINE GLuint
 #define _GL_UINT_RET { \
 	gl_deprecated();   \
 	return 0;          \
 }
 
-#define _GL_VOID _GL_PREFIX void
+#define _GL_VOID BLI_INLINE void
 #define _GL_VOID_RET { \
 	gl_deprecated();   \
 }
@@ -462,7 +460,6 @@ _GL_VOID DO_NOT_USE_glVertexPointer (GLint size, GLenum type, GLsizei stride, co
 #undef _GL_UINT_RET
 #undef _GL_VOID
 #undef _GL_VOID_RET
-#undef _GL_PREFIX
 
 #if defined(__GNUC__)
 #  pragma GCC diagnostic pop
